created interface-reservation and reservation form a form group

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<div>
+    <h1>Welcome to Hotel Reservation APP</h1>
+    <button [routerLink]="['/new']">New Reservation</button>
+    <button [routerLink]="['/all']">All Reservations</button>
+</div>
