--- a/src/app/reservation-form/reservation-form.component.html
+++ b/src/app/reservation-form/reservation-form.component.html
@@ -2,23 +2,28 @@
     <div>
         <label for="check-in-date">Check-In Date:</label>
         <input type="date" id="check-in-date" formControlName="checkInDate">
+        <div *ngIf = "reservationForm.get('checkInDate')?.invalid && reservationForm.get('checkInDate')?.touched">check-in-date is required</div>
     </div>
     <div>
         <label for="check-out-date">Check-Out Date:</label>
         <input type="date" id="check-out-date" formControlName="checkOutDate">
+        <div *ngIf = "reservationForm.get('checkOutDate')?.invalid && reservationForm.get('checkOutDate')?.touched">check-out-date is required</div>
     </div>
     <div>
-        <label for="guests-name">Guest's Name:</label>
-        <input type="text" id="guests-name" formControlName="guestsName">
+        <label for="guest-name">Guest's Name:</label>
+        <input type="text" id="guest-name" formControlName="guestName">
+        <div *ngIf = "reservationForm.get('guestName')?.invalid && reservationForm.get('guestName')?.touched">guest-name is required</div>
     </div>
     <div>
-        <label for="guests-email">Guest's Email:</label>
-        <input type="email" id="guests-email" formControlName="guestsEmail">
+        <label for="guest-email">Guest's Email:</label>
+        <input type="email" id="guest-email" formControlName="guestEmail">
+        <div *ngIf = "reservationForm.get('guestEmail')?.invalid && reservationForm.get('guestEmail')?.touched">guest-email is required</div>
     </div>
     <div>
         <label for="room-number">Room No:</label>
         <input type="number" id="room-number" formControlName="roomNumber">
+        <div *ngIf = "reservationForm.get('roomNumber')?.invalid && reservationForm.get('roomNumber')?.touched">room-number is required</div>
     </div>
-
-    <button type="submit">Submit</button>
+ 
+    <button type="submit" [disabled]="reservationForm.invalid">Submit</button>
 </form>
