Added Edit route, styling and home component to others

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
-<div>
-    <h1>Welcome to Hotel Reservation APP</h1>
-    <button [routerLink]="['/new']">New Reservation</button>
-    <button [routerLink]="['/all']">All Reservations</button>
+<div class="text-center my-3">
+    <h2 class="mb-4">Welcome to Hotel Reservation APP</h2>
+        <button class="btn btn-primary mx-2"  [routerLink]="['/new']">New Reservation</button>
+    <button class="btn btn-primary mx-2"  [routerLink]="['/all']">All Reservations</button>
 </div>
